Змінив опис сайту

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="header_left">
             <h1>Гречка Михайло</h1>
             <div class="bio">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <p>В цьому сайті ви дізнайтесь про незвичайні проекти. Які зроблені непогано і комфортно.</p>
             </div>
         </div>
         <div class="header_right">
