--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </main>
     <footer>
         <div class="footer_content">
-            Створено мною в 2024 | Logika
+            Створив Гречка Михайло в 2024 | Logika
         </div>
     </footer>
 </body>
