Додав посилання на соц мережі і зробив анімацію стрілки вниз

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/f77600b8df.js" crossorigin="anonymous"></script>
+    <a href="mailto:yalta010709@gmail.com"></a>
 </head>
 <body>
     <header>
@@ -25,13 +26,13 @@
             <h1>Навички</h1>
             <div class="section_row">
                 <div class="section_item">
-                    <img src="html_logo.png" alt="">
+                    <img src="html_logo.png" alt="HTML">
                 </div>
                 <div class="section_item">
-                    <img src="css_logo.png" alt="">
+                    <img src="css_logo.png" alt="CSS">
                 </div>
                 <div class="section_item">
-                    <img src="js_logo.png" alt="">
+                    <img src="js_logo.png" alt="JS">
                 </div>
             </div>
         </section>
@@ -46,14 +47,14 @@
         <section class="contacts">
             <h1>Контакти</h1>
             <div class="section_row">
-                <div class="section_item">
-                    <img src="Instagram_icon.png.webp" alt="">
+                <div class="section_item instagram">
+                    <img src="Instagram_icon.png.webp" alt="Інстаграм">
                 </div>
-                <div class="section_item">
-                    <img src="tg_logo.svg" alt="">
+                <div class="section_item telegram">
+                    <img src="tg_logo.svg" alt="Телеграм">
                 </div>
-                <div class="section_item">
-                    <img src="email_logo.png" alt="">
+                <div class="section_item gmail">
+                    <img src="email_logo.png" alt="Почта">
                 </div>
             </div>
         </section>
@@ -63,5 +64,8 @@
             Створив Гречка Михайло в 2024 | Logika
         </div>
     </footer>
+
+    <script src='https://cdn.jsdelivr.net/npm/animejs@3.2.1/lib/anime.min.js'></script>
+    <script src="script.js"></script>
 </body>
 </html>
